--- a/app/code/ivpel/school/view/frontend/layout/ivpel_school_index_index.xml
+++ b/app/code/ivpel/school/view/frontend/layout/ivpel_school_index_index.xml
@@ -3,7 +3,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="ivpel\school\Block\SmileSchool" name="SmileSchool" template="ivpel_school::SmileSchool.phtml" />
+            <block class="ivpel\school\Block\SmileSchool" name="smile_school" template="ivpel_school::smile_school.phtml" />
         </referenceContainer>
     </body>
 </page>
