first view was create

--- a/app/code/Hodovanuk/FirstModule/view/frontend/layout/hodovanukfm_task_index.xml
+++ b/app/code/Hodovanuk/FirstModule/view/frontend/layout/hodovanukfm_task_index.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="container">
+        <referenceContainer name="content">
             <block class="Hodovanuk\FirstModule\Block\Task\Index" name="task_index" template="Hodovanuk_FirstModule::index.phtml"/>
         </referenceContainer>
     </body>
