--- a/app/code/Hodovanuk/Second/view/frontend/layout/second_site_index.xml
+++ b/app/code/Hodovanuk/Second/view/frontend/layout/second_site_index.xml
@@ -10,10 +10,10 @@
             </container>
         </referenceContainer>
         <referenceContainer name="content">
-            <block class="Hodovanuk\Second\Block\Site\Main" name="task_index" template="Hodovanuk_Second::site.phtml"/>
+            <block class="Hodovanuk\Second\Block\Site\SideList" name="task_index" template="Hodovanuk_Second::site.phtml"/>
         </referenceContainer>
         <referenceContainer name="footer-container">
-            <block class="Hodovanuk\Second\Block\Site\Main" name="my.footer.block" template="Hodovanuk_Second::footer_block.phtml"/>
+            <block class="Hodovanuk\Second\Block\Site\SideList" name="my.footer.block" template="Hodovanuk_Second::footer_block.phtml"/>
         </referenceContainer>
     </body>
 </page>
