--- a/app/code/Hodovanuk/Second/view/frontend/layout/second_site_index.xml
+++ b/app/code/Hodovanuk/Second/view/frontend/layout/second_site_index.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <page layout="3columns" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
+        <referenceBlock name="page.main.title" remove="true"/>
         <referenceContainer name="div.sidebar.main" htmlTag="div">
             <container name="list.value1" htmlTag="ol">
                 <block class="Hodovanuk\Second\Block\Site\SideList" name="head.bar" template="Hodovanuk_Second::side_list.phtml"/>
