--- a/app/code/Hodovanuk/Second/view/frontend/templates/side_list.phtml
+++ b/app/code/Hodovanuk/Second/view/frontend/templates/side_list.phtml
@@ -1,4 +1,4 @@
 <h3>Links to: </h3>
-<?php foreach ($block->_myArrValues as $key => $value) : ?>
+<?php foreach ($block->myArrValues as $value) : ?>
     <li><?= $value; ?></li>
 <?php endforeach; ?>
