--- a/app/code/Lebed/FirstModule/view/frontend/layout/lebed_first_module_renderer_index.xml
+++ b/app/code/Lebed/FirstModule/view/frontend/layout/lebed_first_module_renderer_index.xml
@@ -14,6 +14,11 @@
     <body>
         <referenceContainer name="content">
             <block class="Lebed\FirstModule\Block\Renderer\Wording" name="renderer.wording" template="Lebed_FirstModule::renderer/wording.phtml" />
+            <block class="Magento\Framework\View\Element\Template" name="block.with.view.model" template="Lebed_FirstModule::template_with_view_model.phtml">
+                <arguments>
+                    <argument name="price_currency" xsi:type="object">Lebed\FirstModule\ViewModel\PriceCurrency</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
