--- a/app/code/Skavronskiy/FirstModule/view/frontend/layout/skavronskiy_first_module_renderer_index.xml
+++ b/app/code/Skavronskiy/FirstModule/view/frontend/layout/skavronskiy_first_module_renderer_index.xml
@@ -5,6 +5,7 @@
  * See COPYING.txt for license details.
  */
 -->
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-right" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
             <block class="Skavronskiy\FirstModule\Block\Renderer\Wording" name="render_wording" template="Skavronskiy_FirstModule::renderer/wording.phtml"/>
