rework link to cart

--- a/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
+++ b/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
@@ -1,2 +1,4 @@
 <h3>This is destination page:</h3>
-<a href="<?= $block->getBaseUrl() . $block->urlToCart; ?>"><button type="submit">Go to Cart</button></a>
+<form action="" method="">
+    <input type="submit" name="submit" value="Go to chart">
+</form>
