fix the last issues

--- a/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
+++ b/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
@@ -1,4 +1,4 @@
 <h3>This is destination page:</h3>
 <form action="" method="">
-    <input type="submit" name="submit" value="Go to chart">
+    <input type="submit" name="submit" value="Go to cart">
 </form>
