--- a/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
+++ b/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
@@ -2,3 +2,5 @@
 <form action="" method="">
     <input type="submit" name="submit" value="Go to cart">
 </form>
+<p>or</p>
+<a href="<?= $block->getBaseUrl() . $block->urlToCart; ?>">Go to cart</a>
