beter logic, fix issues

--- a/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
+++ b/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
@@ -3,4 +3,4 @@
     <input type="submit" name="submit" value="Go to cart">
 </form>
 <p>or</p>
-<a href="<?= $block->getBaseUrl() . $block->urlToCart; ?>">Go to cart</a>
+<a href="<?= $block->getLink(); ?>">Go to cart</a>
