--- a/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
+++ b/app/code/Hodovanuk/Third/view/frontend/templates/arrival.phtml
@@ -1,6 +1,4 @@
 <h3>This is destination page:</h3>
-<form action="" method="">
-    <input type="submit" name="submit" value="Go to cart">
-</form>
+<a href="<?= $block->getButtonLink(); ?>"><button>Go to cart</button></a>
 <p>or</p>
 <a href="<?= $block->getLink(); ?>">Go to cart</a>
