Delete tab.Rename method

--- a/app/code/Koshyk/ThirdModule/view/frontend/templates/firstblock.phtml
+++ b/app/code/Koshyk/ThirdModule/view/frontend/templates/firstblock.phtml
@@ -10,4 +10,4 @@
 
 
 <h2 class="one"><?php echo $block->escapeHtml($block->getText()); ?></h2>
-<h2 class="one"><a  href="<?php echo $block->getReviewUrl(); ?>">--->Go to shopping cart<---</a></h2>
+<h2 class="one"><a  href="<?php echo $block->escapeHtml($block->getCartUrl()); ?>">--->Go to shopping cart<---</a></h2>
