--- a/app/code/Chleck/ThirdModule/view/frontend/template/renderer/price.phtml
+++ b/app/code/Chleck/ThirdModule/view/frontend/template/renderer/price.phtml
@@ -1,2 +1,9 @@
 <?php
+/**
+ * Chleck ThirdModule renderer wording template
+ *
+ * @category  Chleck
+ * @package   Chleck\ThirdModule
+ * @author    Yuri Chleck <yurichleck@gmail.com>
+ */
 echo $block->getData('priceCurrency')->getCheckoutPrice(1111);
