Home work was corrected

--- a/app/code/Chleck/ThirdModule/view/frontend/template/renderer/first.phtml
+++ b/app/code/Chleck/ThirdModule/view/frontend/template/renderer/first.phtml
@@ -6,6 +6,5 @@
  * @package   Chleck\ThirdModule
  * @author    Yuri Chleck <yurichleck@gmail.com>
  */
-
 ?>
-<h1><?php echo $block->getText(); ?></h1>
+<h1>echo $block->escapeHtml($block->getReviewUrl());</h1>
