--- a/app/code/Chleck/ThirdModule/view/frontend/template/renderer/second.phtml
+++ b/app/code/Chleck/ThirdModule/view/frontend/template/renderer/second.phtml
@@ -6,4 +6,6 @@
  * @package   Chleck\ThirdModule
  * @author    Yuri Chleck <yurichleck@gmail.com>
  */
-echo $block->getData('priceCurrency')->getCheckoutPrice(1111);
+
+?>
+<h1><?php echo $block->escapeHtml($block->getText()); ?></h1>
