--- a/app/code/Lebed/FirstModule/view/frontend/templates/renderer/wording.phtml
+++ b/app/code/Lebed/FirstModule/view/frontend/templates/renderer/wording.phtml
@@ -7,5 +7,9 @@
  * @author    Tetiana Lebed <teleb@smile.fr>
  * @copyright 2019 Smile
  */
-/** @var \Lebed\FirstModule\Block\Renderer\Wording */?>
+/** @var \Lebed\FirstModule\Block\Renderer\Wording */
+/** @var \Lebed\FourthModule\Helper\Data $configData */
+$configData = $this->helper('Lebed\FourthModule\Helper\Data');
+?>
 <h1><?= $block->getText() ?></h1>
+<h2><?= $configData->getInputValue(); ?></h2>
