--- a/app/code/Chleck/SecondModuleHW/view/frontend/layout/mymodule_chleckIndextest_indextest.xml
+++ b/app/code/Chleck/SecondModuleHW/view/frontend/layout/mymodule_chleckIndextest_indextest.xml
@@ -6,6 +6,6 @@
             <!--<action method="setTemplate">
                 <argument name="template" xsi:type="string">Chleck_SecondModuleHW::product/view/review.phtml</argument>
             </action>-->
-            <block class="Chleck\SecondModuleHW\Block\ChleckTest\Test" name="Test" template="Chleck_SecondModuleHW::template.phtml" />
+            <block class="Chleck\SecondModuleHW\Block\ChleckTest\Test" name="Test" template="Chleck_SecondModuleHW::wording.phtml" />
     </body>
 </page>
