--- a/app/code/Hodovanuk/Second/view/frontend/templates/site.phtml
+++ b/app/code/Hodovanuk/Second/view/frontend/templates/site.phtml
@@ -1,3 +1,7 @@
+<?php
+$value = $this->helper('Hodovanuk\Config\Helper\Data');
+var_dump($value->getSecondValue());
+?>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
