--- a/app/code/Koshyk/FirstModule/view/frontend/templates/renderer/nordhing.phtml
+++ b/app/code/Koshyk/FirstModule/view/frontend/templates/renderer/nordhing.phtml
@@ -1,1 +1,5 @@
+<?php
+$configData = $this->helper('Koshyk\ConfigurationK\Helper\Data');
+?>
 <h1><?php echo $block->getText(); ?></h1>
+<h1><?php echo $configData->getTrue(); ?></h1>
