--- a/app/code/Borovets/FirstModule/view/frontend/templates/renderer/wording.phtml
+++ b/app/code/Borovets/FirstModule/view/frontend/templates/renderer/wording.phtml
@@ -1,1 +1,3 @@
+<?php $configData = $this->helper('Borovets\Configuration_Borovets\Helper\Data'); ?>
 <h1><?php echo $block->getText(); ?></h1>
+<h1><?php echo $configData->getInputFieldValue(); ?></h1>
