--- a/app/code/Skavronskiy/FirstModule/view/frontend/templates/renderer/wording.phtml
+++ b/app/code/Skavronskiy/FirstModule/view/frontend/templates/renderer/wording.phtml
@@ -1,1 +1,5 @@
+<?php
+$configData= $this->helper('Skavronskiy\SamConfiguration\Helper\Data');
+?>
 <h1> <?php echo $block->getText(); ?></h1>
+<h1> <?php echo $configData->getValue(); ?></h1>
