--- a/app/code/Semysiuk/FirstModule/view/frontend/layout/semysiuk_firstmodule_renderer_index.xml
+++ b/app/code/Semysiuk/FirstModule/view/frontend/layout/semysiuk_firstmodule_renderer_index.xml
@@ -3,6 +3,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
+            <block class="Semysiuk\FirstModule\Block\Renderer\Wording" name="layout_view" template="Semysiuk_FirstModule::renderer/wording.phtml"></block>
             <block class="Magento\Framework\View\Element\Template" name="first_view_model" template="Semysiuk_FirstModule::renderer/price.phtml">
                 <arguments>
                     <argument name="priceCurrency" xsi:type="object">Semysiuk\FirstModule\ViewModel\PriceCurrency</argument>
