--- a/app/code/Hodovanuk/Second/view/frontend/templates/site.phtml
+++ b/app/code/Hodovanuk/Second/view/frontend/templates/site.phtml
@@ -1,6 +1,6 @@
 <?php
 $value = $this->helper('Hodovanuk\Config\Helper\Data');
-var_dump($value->getSecondValue());
+echo $value->getSecondValue();
 ?>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
