Code style was fixed.

--- a/app/code/Chleck/ThirdModule/view/frontend/layout/third_redirect_redirect.xml
+++ b/app/code/Chleck/ThirdModule/view/frontend/layout/third_redirect_redirect.xml
@@ -8,10 +8,12 @@
  * @author    Yuri Chleck <yurichlek@gmail.com>
  */
 -->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Chleck\ThirdModule\Block\Second\Index" name="renderer_wording" template="Chleck_ThirdModuleHw::renderer/wording.phtml"/>
+            <block class="Chleck\ThirdModule\Block\Second\Index" name="renderer_wording"
+                   template="Chleck_ThirdModuleHw::renderer/wording.phtml"/>
         </referenceContainer>
     </body>
 </page>
