--- a/app/code/Chleck/ThirdModule/view/frontend/template/renderer/first.phtml
+++ b/app/code/Chleck/ThirdModule/view/frontend/template/renderer/first.phtml
@@ -7,4 +7,4 @@
  * @author    Yuri Chleck <yurichleck@gmail.com>
  */
 ?>
-<h1>echo $block->escapeHtml($block->getReviewUrl());</h1>
+<h1><?php echo $block->escapeHtml($block->getReviewUrl()); ?></h1>
