--- a/app/code/Chleck/ThirdModule/view/frontend/layout/third_viewmodel_index.xml
+++ b/app/code/Chleck/ThirdModule/view/frontend/layout/third_viewmodel_index.xml
@@ -8,10 +8,12 @@
  * @author    Roman Chernii <roche@smile.fr>
  */
 -->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template" name="first_veiw_model" template="Chleck_ThirdModuleHw::renderer/price.phtml">
+            <block class="Magento\Framework\View\Element\Template" name="first_veiw_model"
+                   template="Chleck_ThirdModuleHw::renderer/price.phtml">
                 <arguments>
                     <argument name="priceCurrency" xsi:type="object">Roche\Test\ViewModel\PriceCurrency</argument>
                 </arguments>
