--- a/app/code/Koshyk/Blog/view/adminhtml/layout/koshyk_blog_post_index.xml
+++ b/app/code/Koshyk/Blog/view/adminhtml/layout/koshyk_blog_post_index.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0"?>
 <!--
 /**
- * Roche blog post index layout
+ * Koshyk blog post index layout
  *
- * @category  Roche
- * @package   Roche\Blog
- * @author    Roman Chernii <roche@smile.fr>
- * @copyright 2018 Smile
+ * @category  Koshyk
+ * @package   Koshyk\Blog
+ * @author    Roman Koshyk <romadaaaa@gmail.com>
  */
 --><page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
