--- a/app/code/Hodovanuk/Blog/view/adminhtml/layout/hodovanuk_blog_comments_index.xml
+++ b/app/code/Hodovanuk/Blog/view/adminhtml/layout/hodovanuk_blog_comments_index.xml
@@ -2,6 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
+            <uiComponent name="hodovanuk_blog_comments_listing"/>
         </referenceContainer>
     </body>
 </page>
