--- a/app/code/Hodovanuk/Blog/view/adminhtml/layout/hodovanuk_blog_post_index.xml
+++ b/app/code/Hodovanuk/Blog/view/adminhtml/layout/hodovanuk_blog_post_index.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0"?>
-<!--
-/**
- * Roche blog post index layout
- *
- * @category  Roche
- * @package   Roche\Blog
- * @author    Roman Chernii <roche@smile.fr>
- * @copyright 2018 Smile
- */
---><page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
+            <uiComponent name="hodovanuk_blog_post_listing"/>
         </referenceContainer>
     </body>
 </page>
