--- a/app/code/Roche/Blog/view/adminhtml/layout/roche_blog_post_index.xml
+++ b/app/code/Roche/Blog/view/adminhtml/layout/roche_blog_post_index.xml
@@ -8,7 +8,8 @@
  * @author    Roman Chernii <roche@smile.fr>
  * @copyright 2018 Smile
  */
---><page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+-->
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
             <uiComponent name="roche_blog_post_listing"/>
