post form was comlete

--- a/app/code/Dehtiarov/BlogVideh/view/adminhtml/layout/dehtiarov_blogvideh_post_edit.xml
+++ b/app/code/Dehtiarov/BlogVideh/view/adminhtml/layout/dehtiarov_blogvideh_post_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!--
 /**
- * Dehtiarov blog post index layout
+ * Dehtiarov Blog post edit layout
  *
  * @category  Dehtiarov
  * @package   Dehtiarov\BlogVideh
@@ -10,9 +10,11 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <update handle="styles"/>
+    <update handle="editor"/>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="dehtiarov_blogvideh_post_listing"/>
+            <uiComponent name="dehtiarov_blogvideh_post_form"/>
         </referenceContainer>
     </body>
 </page>
