add-- date sortorder

--- a/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_form.phtml
+++ b/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_form.phtml
@@ -5,8 +5,8 @@
       data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
       data-mage-init='{"validation":{}}'>
     <fieldset class="fieldset">
-        <legend class="legend"><span><?= $block->escapeHtml(__('Left comment')) ?></span></legend><br />
-        <div class="field note no-label"><?= $block->escapeHtml(__('Just left your comments and admin will answer to you')) ?></div>
+        <legend class="legend"><span><?= $block->escapeHtml(__('Leave your comment')) ?></span></legend><br />
+        <div class="field note no-label"><?= $block->escapeHtml(__('Just leave your comments and admin will answer to you')) ?></div>
         <div class="field name required">
             <label class="label" for="first_name"><span><?= $block->escapeHtml(__('First name')) ?></span></label>
             <div class="control">
