add cms blocks and cms page

--- a/app/code/Roche/Blog/view/frontend/layout/roche_blog_blog_post_index.xml
+++ b/app/code/Roche/Blog/view/frontend/layout/roche_blog_blog_post_index.xml
@@ -4,7 +4,7 @@
  * Roche blog post listing page xml
  *
  * @category  Roche
- * @package   Roche\Test
+ * @package   Roche\Blog
  * @author    Roman Chernii <roche@smile.fr>
  * @copyright 2019 Smile
  */
