--- a/app/code/Roche/Blog/view/frontend/layout/roche_blog_blog_post_view.xml
+++ b/app/code/Roche/Blog/view/frontend/layout/roche_blog_blog_post_view.xml
@@ -4,7 +4,7 @@
  * Roche blog post page xml
  *
  * @category  Roche
- * @package   Roche\Test
+ * @package   Roche\Blog
  * @author    Roman Chernii <roche@smile.fr>
  * @copyright 2019 Smile
  */
@@ -13,6 +13,11 @@
     <body>
         <referenceContainer name="content">
             <block class="Roche\Blog\Block\Post\View" name="post_view" template="Roche_Blog::post/view.phtml"/>
+            <block class="Magento\Cms\Block\Block" name="block-comment-policy">
+                <arguments>
+                    <argument name="block_id" xsi:type="string">block-comment-policy</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
