--- a/app/code/Semysiuk/BlogModule/view/frontend/layout/semysiuk_blogmodule_blog_post_view.xml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/layout/semysiuk_blogmodule_blog_post_view.xml
@@ -2,8 +2,13 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
+<!--        <referenceContainer name="content">-->
+<!--            <block class="Semysiuk\BlogModule\Block\Comment\Listing" name="comments_view" template="Semysiuk_BlogModule::comment/listing.phtml"/>-->
+<!--        </referenceContainer>-->
         <referenceContainer name="content">
             <block class="Semysiuk\BlogModule\Block\Post\View" name="post_view" template="Semysiuk_BlogModule::post/view.phtml"/>
+            <block class="Semysiuk\BlogModule\Block\Comment\Listing" name="comments_view" template="Semysiuk_BlogModule::comment/listing.phtml"/>
+            <block class="Semysiuk\BlogModule\Block\Post\Form" name="post_comment_form" template="Semysiuk_BlogModule::post/form.phtml"/>
         </referenceContainer>
     </body>
 </page>
