--- a/app/code/Semysiuk/BlogModule/view/frontend/layout/semysiuk_blogmodule_blog_post_view.xml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/layout/semysiuk_blogmodule_blog_post_view.xml
@@ -4,6 +4,12 @@
     <body>
         <referenceContainer name="content">
             <block class="Semysiuk\BlogModule\Block\Post\View" name="post_view" template="Semysiuk_BlogModule::post/view.phtml"/>
+
+        <block class="Magento\Cms\Block\Block" name="block-comment-policy">
+            <arguments>
+                <argument name="block_id" xsi:type="string">block-comment-policy</argument>
+            </arguments>
+        </block>
         </referenceContainer>
     </body>
 </page>
