--- a/app/code/Borovets/Blog/Setup/include/block/footer-link.phtml
+++ b/app/code/Borovets/Blog/Setup/include/block/footer-link.phtml
@@ -1,6 +1,6 @@
 <ul class="footer links">
     <li class="nav item"><a href="{{store url='about-us'}}">About us</a></li>
     <li class="nav item"><a href="{{store url='customer-service'}}">Customer Service</a></li>
-    <li class="nav item"><a href="{{store url='roche_blog/blog_post/index'}}">Roche Blog</a></li>
-    <li class="nav item"><a href="{{store url='roche-faq'}}">FAQ</a></li>
+    <li class="nav item"><a href="{{store url='borovets_blog/post/index'}}">Borovets Blog</a></li>
+    <li class="nav item"><a href="{{store url='borovets-faq'}}">FAQ</a></li>
 </ul>
