--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
@@ -8,7 +8,7 @@
 /** @var \Semysiuk\BlogModule\Block\Post\Form $block */
 ?>
 <form class="form contact"
-      action="<?= $block->escapeUrl($block->getFormAction()) ?>"
+      action="<?= $block->escapeUrl($block->getUrl("semysiuk_blogmodule/comment/index")) ?>"
       id="contact-form"
       method="post"
       data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
@@ -50,7 +50,7 @@
     </fieldset>
     <div class="actions-toolbar">
         <div class="primary">
-            <input type="hidden" name="post-id" id="postId" value="<?php $block->getPostId(); ?>" <?php $block->getPostId(); ?> />
+            <input type="hidden" name="post-id" id="postId" value="<?php echo htmlspecialchars($block->getPostId()); ?>" <?php $block->getPostId(); ?>/>
             <button type="submit" title="<?= $block->escapeHtmlAttr(__('Submit')) ?>" class="action submit primary">
                 <span><?= $block->escapeHtml(__('Submit')) ?></span>
             </button>
