--- a/app/code/Koshyk/Blog/view/frontend/layout/koshyk_blog_blog_post_view.xml
+++ b/app/code/Koshyk/Blog/view/frontend/layout/koshyk_blog_blog_post_view.xml
@@ -12,6 +12,11 @@
     <body>
         <referenceContainer name="content">
             <block class="Koshyk\Blog\Block\Post\View" name="post_view" template="Koshyk_Blog::post/view.phtml"/>
+            <block class="Magento\Cms\Block\Block" name="block-comment-policy">
+                <arguments>
+                    <argument name="block_id" xsi:type="string">block-comment-policy</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
