--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
@@ -8,7 +8,7 @@
 /** @var \Semysiuk\BlogModule\Block\Post\Form $block */
 ?>
 <form class="form contact"
-      action="<?= $block->escapeUrl($block->getUrl("semysiuk_blogmodule/comment/index")) ?>"
+      action="<?= $block->escapeUrl($block->getFormUrlLink()) ?>"
       id="contact-form"
       method="post"
       data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
@@ -32,12 +32,6 @@
             <label class="label" for="email"><span><?= $block->escapeHtml(__('Email')) ?></span></label>
             <div class="control">
                 <input name="email" id="email" title="<?= $block->escapeHtmlAttr(__('Email')) ?>" value="<?= $block->escapeHtmlAttr($this->helper('Magento\Contact\Helper\Data')->getPostValue('email') ?: $this->helper('Magento\Contact\Helper\Data')->getUserEmail()) ?>" class="input-text" type="email" data-validate="{required:true, 'validate-email':true}"/>
-            </div>
-        </div>
-        <div class="field telephone">
-            <label class="label" for="telephone"><span><?= $block->escapeHtml(__('Phone Number')) ?></span></label>
-            <div class="control">
-                <input name="telephone" id="telephone" title="<?= $block->escapeHtmlAttr(__('Phone Number')) ?>" value="<?= $block->escapeHtmlAttr($this->helper('Magento\Contact\Helper\Data')->getPostValue('telephone')) ?>" class="input-text" type="text" />
             </div>
         </div>
         <div class="field comment required">
