--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
@@ -1,11 +1,9 @@
 <?php
-
+    $posts = $block->getPosts()->getItems();
 ?>
-<?php $postViewModel = $block->getData('post'); ?>
-<?php $posts = $block->getPosts()->getItems(); ?>
-<h1><?php echo __('Blog Posts'); ?></h1>
+
 <?php if (count($posts)): ?>
-    <div class="blog-post-list">
+    <div class="blog-post-list" style="display:flex;flex-flow:row wrap;">
         <?php /** @var $post \Semysiuk\BlogModule\Model\Post */ ?>
         <?php foreach ($posts as $post) : ?>
             <div class="blog-post-list-item">
@@ -18,21 +16,25 @@
                          width="<?php echo $block->getImageWidth(); ?>"/>
                 </div>
                 <div class="blog-post-item-content">
-                    <div class="blog-post-item-discription">
+                    <div class="blog-post-item-discription" style="min-height: 100px;">
                         <?php echo $post->getDescription(); ?>
                     </div>
 
                     <div class="blog-post-item-meta">
-                        <strong><?php echo __('Created at:') ?></strong> <?php echo $post->getCreatedAt(); ?>
-                        <strong><?php echo __('Update at:') ?></strong> <?php echo $post->getUpdateAt(); ?>
+                        <div>
+                            <strong><?php echo __('Created at:') ?></strong> <?php echo $post->getCreatedAt(); ?>
+                        </div>
+                        <div>
+                            <strong><?php echo __('Update at:') ?></strong> <?php echo $post->getUpdateAt(); ?>
+                        </div>
                     </div>
                 </div>
             </div>
         <?php endforeach; ?>
-        <?php if ($block->getPagerHtml()) : ?>
-            <div class="blog-post-toolbar toolbar bottom"><?php echo $block->getPagerHtml(); ?></div>
-        <?php endif; ?>
     </div>
+    <?php if ($block->getPagerHtml()) : ?>
+        <div class="blog-post-toolbar toolbar bottom"><?php echo $block->getPagerHtml(); ?></div>
+    <?php endif; ?>
 <?php else : ?>
     <div class="message info empty"><span><?php /* @escapeNotVerified */ echo __('Blog haven\'t posts.'); ?></span></div>
 <?php endif; ?>
