Fix frontend add comment

--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
@@ -44,7 +44,7 @@
     </fieldset>
     <div class="actions-toolbar">
         <div class="primary">
-            <input type="hidden" name="post-id" id="postId" value="<?php echo htmlspecialchars($block->getPostId()); ?>" <?php $block->getPostId(); ?>/>
+            <input type="hidden" name="post_id" id="postId" value="<?php echo htmlspecialchars($block->getPostId()); ?>" <?php $block->getPostId(); ?>/>
             <button type="submit" title="<?= $block->escapeHtmlAttr(__('Submit')) ?>" class="action submit primary">
                 <span><?= $block->escapeHtml(__('Submit')) ?></span>
             </button>
