--- a/app/code/Borovets/Blog/view/frontend/templates/comment/listing.phtml
+++ b/app/code/Borovets/Blog/view/frontend/templates/comment/listing.phtml
@@ -4,7 +4,6 @@
  */
 /** @var \Borovets\Blog\Block\Comment\Listing $block */
 ?>
-<?php $commentViewModel = $block->getData('comment'); ?>
 <?php $comments = $block->getComments()->getItems(); ?>
 <h2><?php echo __('Comments:'); ?></h2>
 <?php if (count($comments)): ?>
@@ -13,16 +12,17 @@
         <?php foreach ($comments as $comment) : ?>
             <div class="blog-comment-list-item">
                 <div class="blog-comment-item-content" style="background-color: #e0e0e0;">
+                    <div class="blog-comment-item-author" align="right">
+                        <strong><?php echo __('Author: '); ?></strong> <?php echo $block->getAuthor($comment); ?>
+                    </div>
                     <div class="blog-comment-item-comment">
                         <?php echo $comment->getComment(); ?>
-                    </div>
                     <div class="blog-comment-item-answer">
                         <?php if($comment->getAnswer()) {?><strong><?php echo __('Answer: '); ?></strong><?php echo $comment->getAnswer(); } ?>
                     </div>
                 </div>
-                <div class="comment-author-and-date" align="right">
+                <div class="comment-status-and-date" align="right">
                     <strong><?php echo __('Status: '); ?></strong> <?php echo $comment->getAvailableStatuses()[$comment->getStatus()]; ?>
-                    <strong><?php echo __('Author: '); ?></strong> <?php echo $comment->getFirstName().' '.$comment->getLastName(); ?>
                     <strong><?php echo __('Writed at: '); ?></strong> <?php echo $comment->getWritedAt(); ?>
                 </div>
             </div>
