--- a/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_view.phtml
+++ b/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_view.phtml
@@ -24,10 +24,10 @@ $comments = $block->getComment();
         <span><?= $comment->getFirstName(); ?><?= $comment->getLastName(); ?> : </span>
         <span><?= $comment->getComment(); ?></span>
     </div>
-    <?php if (!empty($comment->getAnswerData())) : ?>
-            <div><?php echo __('Admin: ') ?><?= $comment->getAnswerData(); ?></div>
+    <?php if (!empty($comment->getAnswerData()) && $comment->getAnswer() == 3) : ?>
+        <div><?php echo __('Admin: ') ?><?= $comment->getAnswerData(); ?></div>
     <?php endif;?>
-        <div><?php echo __('commented at: ') ?><?= $comment->getCreateData(); ?></div>
+    <div><?php echo __('commented at: ') ?><?= $comment->getCreateData(); ?></div>
     <div><?php echo __('comment status: ') ?><?= $block->getCommentStatus($comment->getAnswer()) ; ?></div>
         <br>
     <?php endforeach;?>
