--- a/app/code/Dehtiarov/BlogVideh/view/frontend/layout/dehtiarov_blogvideh_blog_post_view.xml
+++ b/app/code/Dehtiarov/BlogVideh/view/frontend/layout/dehtiarov_blogvideh_blog_post_view.xml
@@ -12,7 +12,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Dehtiarov\BlogVideh\Block\Post\View" name="post_view" template="Dehtiarov_BlogVideh::post/view.phtml"/>
+            <block class="Dehtiarov\BlogVideh\Block\Post\View" name="post_view" template="Dehtiarov_BlogVideh::blog/post/view.phtml"/>
+            <block class="Dehtiarov\BlogVideh\Block\Comment\Comments" name="add.comments.form" template="Dehtiarov_BlogVideh::blog/comment/add_comment.phtml"/>
+            <block class="Dehtiarov\BlogVideh\Block\Comment\Comments" name="comments_listing" template="Dehtiarov_BlogVideh::blog/comment/comment_view.phtml"/>
         </referenceContainer>
     </body>
 </page>
