--- a/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_list.phtml
+++ b/app/code/Hodovanuk/Blog/view/frontend/templates/blog_post_list.phtml
@@ -1,5 +1,6 @@
 <?php $posts = $block->getPosts()->getItems(); ?>
     <h1><?php echo __('Blog Posts'); ?></h1>
+<?php $data = $block->getCommentsCollection(); ?>
 <?php if (count($posts)): ?>
     <div class="blog-post-list">
         <?php foreach ($posts as $post) : ?>
