--- a/app/code/Skavronskiy/Blog/view/frontend/layout/skavronskiy_blog_blog_post_view.xml
+++ b/app/code/Skavronskiy/Blog/view/frontend/layout/skavronskiy_blog_blog_post_view.xml
@@ -9,6 +9,8 @@
     <body>
         <referenceContainer name="content">
             <block class="Skavronskiy\Blog\Block\Post\View" name="post_view" template="Skavronskiy_Blog::post/view.phtml"/>
+            <block class="Skavronskiy\Blog\Block\Comment\Listing" name="comment_listing" template="Skavronskiy_Blog::comment/listing.phtml"/>
+            <block class="Skavronskiy\Blog\Block\Comment\AddComment" name="comment_add_form" template="Skavronskiy_Blog::comment/addcomment.phtml"/>
         </referenceContainer>
     </body>
 </page>
