--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/view.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/view.phtml
@@ -19,7 +19,7 @@ $comments = $block->getComments();
         <?php echo $post->getContent(); ?>
     </div>
 </div>
-<div class="blog-post-item-meta">
+<div class="blog-post-item-meta" style="margin-top:20px;">
     <div>
         <strong><?php echo __('Created at:') ?></strong> <?php echo $post->getCreatedAt(); ?>
     </div>
