--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
@@ -6,7 +6,7 @@
     <div class="blog-post-list" style="display:flex;flex-flow:row wrap;">
         <?php /** @var $post \Semysiuk\BlogModule\Model\Post */ ?>
         <?php foreach ($posts as $post) : ?>
-            <div class="blog-post-list-item">
+            <div class="blog-post-list-item" style="border:2px solid grey;margin:10px 10px 10px 10px;position:relative;">
                 <div class="post-title">
                     <h3 class="blog-post-item-title">
                         <a href="<?php echo $block->getPostUrl($post); ?>"><?php echo $post->getTitle(); ?></a>
@@ -16,17 +16,21 @@
                          width="<?php echo $block->getImageWidth(); ?>"/>
                 </div>
                 <div class="blog-post-item-content">
-                    <div class="blog-post-item-discription" style="min-height: 100px;">
+                    <div class="blog-post-item-discription">
                         <?php echo $post->getDescription(); ?>
                     </div>
-
-                    <div class="blog-post-item-meta">
-                        <div>
-                            <strong><?php echo __('Created at:') ?></strong> <?php echo $post->getCreatedAt(); ?>
-                        </div>
-                        <div>
-                            <strong><?php echo __('Update at:') ?></strong> <?php echo $post->getUpdateAt(); ?>
-                        </div>
+                    <div>
+                        <p>
+                            <?php echo $post->getContent(); ?>
+                        </p>
+                    </div>
+                </div>
+                <div class="blog-post-item-meta">
+                    <div>
+                        <strong><?php echo __('Created at:') ?></strong> <?php echo $post->getCreatedAt(); ?>
+                    </div>
+                    <div>
+                        <strong><?php echo __('Update at:') ?></strong> <?php echo $post->getUpdateAt(); ?>
                     </div>
                 </div>
             </div>
