--- a/app/code/Dehtiarov/BlogVideh/view/frontend/layout/dehtiarov_blogvideh_blog_post_view.xml
+++ b/app/code/Dehtiarov/BlogVideh/view/frontend/layout/dehtiarov_blogvideh_blog_post_view.xml
@@ -14,7 +14,7 @@
         <referenceContainer name="content">
             <block class="Dehtiarov\BlogVideh\Block\Post\View" name="post_view" template="Dehtiarov_BlogVideh::blog/post/view.phtml"/>
             <block class="Dehtiarov\BlogVideh\Block\Comment\Comments" name="add.comments.form" template="Dehtiarov_BlogVideh::blog/comment/add_comment.phtml"/>
-            <block class="Dehtiarov\BlogVideh\Block\Comment\Comments" name="comments_listing" template="Dehtiarov_BlogVideh::blog/comment/comment_view.phtml"/>
+            <block class="Dehtiarov\BlogVideh\Block\Comment\Comments" name="comments_listing" cacheable="false" template="Dehtiarov_BlogVideh::blog/comment/comment_view.phtml"/>
         </referenceContainer>
     </body>
 </page>
