--- a/app/code/Dehtiarov/BlogVideh/view/frontend/templates/blog/comment/add_comment.phtml
+++ b/app/code/Dehtiarov/BlogVideh/view/frontend/templates/blog/comment/add_comment.phtml
@@ -2,16 +2,12 @@
 /** @var $block \Dehtiarov\BlogVideh\Block\Comment\Comments */
 /** @var $post \Dehtiarov\BlogVideh\Api\Data\CommentInterface */
 
-$customerInfo = $this->getCustomerInfo();
+$customerInfo = $block->getCustomerInfo();
 ?>
 
 <h1>Add comment</h1>
-<form action="" method="post">
-
-</form>
-
 <form class="form addcommnet"
-      action="<?= $this->getCommentActionUrl(); ?>"
+      action="<?= $block->getCommentActionUrl(); ?>"
       id="comment-form"
       method="post"
       data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
